must-gather.local.4557266359843115887/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/multus.openshift.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2022-05-24T18:06:58Z"
  generation: 422
  labels:
    app: multus-admission-controller
  name: multus.openshift.io
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 4e35e56a-2302-44e2-8a26-07783f86078d
  resourceVersion: "313254"
  uid: 041a3a1d-ca1a-4a0f-9721-e13d43dee805
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJUVpyeGlYaVBPb1l3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZMU16UXhOVFkyTWpBZQpGdzB5TWpBMU1qUXhPREEzTkRGYUZ3MHlOREEzTWpJeE9EQTNOREphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOVE0wTVRVMk5qSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGV0bUw4N29NaGowd0V1Rmh0aEpUSjY2V1p6VThIUFhsegpobi9JNGdOWHhFMz [...]
    service:
      name: multus-admission-controller
      namespace: openshift-multus
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: multus-validating-config.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - k8s.cni.cncf.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - network-attachment-definitions
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
