must-gather.local.4557266359843115887/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/snapshot.storage.k8s.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    operator.openshift.io/spec-hash: f21cd4bafe69f05d800b1d8beda3f76f8eba610c663075ffaf71229630eccfbb
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2022-05-24T18:07:39Z"
  generation: 2
  labels:
    app: csi-snapshot-webhook
  name: snapshot.storage.k8s.io
  resourceVersion: "5199"
  uid: f1eb646a-2777-496f-94fb-9ecee57bf3ea
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJUVpyeGlYaVBPb1l3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZMU16UXhOVFkyTWpBZQpGdzB5TWpBMU1qUXhPREEzTkRGYUZ3MHlOREEzTWpJeE9EQTNOREphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOVE0wTVRVMk5qSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGV0bUw4N29NaGowd0V1Rmh0aEpUSjY2V1p6VThIUFhsegpobi9JNGdOWHhFMz [...]
    service:
      name: csi-snapshot-webhook
      namespace: openshift-cluster-storage-operator
      path: /volumesnapshot
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: volumesnapshotclasses.snapshot.storage.k8s.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - snapshot.storage.k8s.io
    apiVersions:
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - volumesnapshots
    - volumesnapshotcontents
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
