must-gather.local.4557266359843115887/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/sre-hiveownership-validation.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"service.beta.openshift.io/inject-cabundle":"true"},"labels":{"hive.openshift.io/managed":"true"},"name":"sre-hiveownership-validation"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"service":{"name":"validation-webhook","namespace":"openshift-validation-webhook","path":"/hiveownership-validation"}},"failurePolicy":"Ignore","matchPolicy":"Equivalent","name":"h [...]
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2022-05-24T18:25:30Z"
  generation: 2
  labels:
    hive.openshift.io/managed: "true"
  name: sre-hiveownership-validation
  resourceVersion: "28974"
  uid: b8d65dd2-fef8-437c-98f6-abce11b1a30e
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJUVpyeGlYaVBPb1l3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZMU16UXhOVFkyTWpBZQpGdzB5TWpBMU1qUXhPREEzTkRGYUZ3MHlOREEzTWpJeE9EQTNOREphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOVE0wTVRVMk5qSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGV0bUw4N29NaGowd0V1Rmh0aEpUSjY2V1p6VThIUFhsegpobi9JNGdOWHhFMz [...]
    service:
      name: validation-webhook
      namespace: openshift-validation-webhook
      path: /hiveownership-validation
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: hiveownership-validation.managed.openshift.io
  namespaceSelector: {}
  objectSelector:
    matchLabels:
      hive.openshift.io/managed: "true"
  rules:
  - apiGroups:
    - quota.openshift.io
    apiVersions:
    - '*'
    operations:
    - UPDATE
    - DELETE
    resources:
    - clusterresourcequotas
    scope: Cluster
  sideEffects: None
  timeoutSeconds: 2
