must-gather.local.4557266359843115887/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/sre-pod-validation.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"service.beta.openshift.io/inject-cabundle":"true"},"labels":{"hive.openshift.io/managed":"true"},"name":"sre-pod-validation"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"service":{"name":"validation-webhook","namespace":"openshift-validation-webhook","path":"/pod-validation"}},"failurePolicy":"Ignore","matchPolicy":"Equivalent","name":"pod-validation.manage [...]
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2022-05-24T18:25:30Z"
  generation: 2
  labels:
    hive.openshift.io/managed: "true"
  name: sre-pod-validation
  resourceVersion: "28990"
  uid: ffe6724c-5c33-4108-a398-0e7822a09538
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJUVpyeGlYaVBPb1l3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZMU16UXhOVFkyTWpBZQpGdzB5TWpBMU1qUXhPREEzTkRGYUZ3MHlOREEzTWpJeE9EQTNOREphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOVE0wTVRVMk5qSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGV0bUw4N29NaGowd0V1Rmh0aEpUSjY2V1p6VThIUFhsegpobi9JNGdOWHhFMz [...]
    service:
      name: validation-webhook
      namespace: openshift-validation-webhook
      path: /pod-validation
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: pod-validation.managed.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - v1
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 1
