must-gather.local.4557266359843115887/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/sre-regular-user-validation.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"service.beta.openshift.io/inject-cabundle":"true"},"labels":{"hive.openshift.io/managed":"true"},"name":"sre-regular-user-validation"},"webhooks":[{"admissionReviewVersions":["v1"],"clientConfig":{"service":{"name":"validation-webhook","namespace":"openshift-validation-webhook","path":"/regularuser-validation"}},"failurePolicy":"Ignore","matchPolicy":"Equivalent","name":"regu [...]
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2022-05-24T18:25:30Z"
  generation: 2
  labels:
    hive.openshift.io/managed: "true"
  name: sre-regular-user-validation
  resourceVersion: "29003"
  uid: 3ff8ba5d-7187-4400-83a7-0b989fb376c3
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJUVpyeGlYaVBPb1l3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRZMU16UXhOVFkyTWpBZQpGdzB5TWpBMU1qUXhPREEzTkRGYUZ3MHlOREEzTWpJeE9EQTNOREphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTJOVE0wTVRVMk5qSXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGV0bUw4N29NaGowd0V1Rmh0aEpUSjY2V1p6VThIUFhsegpobi9JNGdOWHhFMz [...]
    service:
      name: validation-webhook
      namespace: openshift-validation-webhook
      path: /regularuser-validation
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: regular-user-validation.managed.openshift.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - cloudcredential.openshift.io
    - machine.openshift.io
    - admissionregistration.k8s.io
    - addons.managed.openshift.io
    - cloudingress.managed.openshift.io
    - managed.openshift.io
    - ocmagent.managed.openshift.io
    - splunkforwarder.managed.openshift.io
    - upgrade.managed.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - '*/*'
    scope: '*'
  - apiGroups:
    - autoscaling.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - clusterautoscalers
    - machineautoscalers
    scope: '*'
  - apiGroups:
    - config.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - clusterversions
    - clusterversions/status
    - schedulers
    - apiservers
    scope: '*'
  - apiGroups:
    - operator.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - kubeapiservers
    - openshiftapiservers
    scope: '*'
  - apiGroups:
    - ""
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - nodes
    - nodes/*
    scope: '*'
  - apiGroups:
    - managed.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - subjectpermissions
    - subjectpermissions/*
    scope: '*'
  - apiGroups:
    - network.openshift.io
    apiVersions:
    - '*'
    operations:
    - '*'
    resources:
    - netnamespaces
    - netnamespaces/*
    scope: '*'
  sideEffects: None
  timeoutSeconds: 2
